--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ body{
 	margin-bottom: 30px;
 	text-align: center;
 }
+#showcase h1{
+	color: #fff;
+	font-size: 50px;
+	line-height:1.6em;
+	padding-top: 30px;
+}
 
 #main{
 	float: left;
